...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.zhongjh.gridview.widget.GridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:audioDeleteColor="@color/blue_primary"
                app:audioPlayColor="@color/blue_primary"
                app:audioProgressColor="@color/blue_primary"
                app:authority="com.zhongjh.demo.fileProvider"
...
                app:maskingTextColor="@color/black_eighty_percent"
                app:maskingTextContent="@string/up_upload_is_customizable"
                app:maskingTextSize="12"
                app:maxCount="7" />

            <CheckBox
                android:id="@+id/cbAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="@string/open_the_album_function" />

            <CheckBox
                android:id="@+id/cbCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/turn_on_the_shooting_function" />

            <CheckBox
                android:id="@+id/cbRecorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/enable_recording" />

...
