...
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
            app:srcCompat="@drawable/ic_camera_zjh"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rlPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/vLine1"
        android:background="#20000000"
        android:contentDescription="显示多个图片的"
        tools:ignore="HardcodedText" />
...
        android:visibility="gone" />

    <View
        android:id="@+id/vLine2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/pvLayout"
        android:background="#40000000"
        android:visibility="gone" />

    <com.zhongjh.albumcamerarecorder.camera.widget.PhotoVideoLayout
        android:id="@+id/pvLayout"
        android:layout_width="match_parent"
...
